fdo#68315 odbc update *reads* a bookmark, not *writes* a bookmark

This code was completely inverted. The row update operation
*reads* a bookmark (that is, what row to update), not *writes*
a bookmark.

So we were passing an empty bookmark, and thus the update was failing
because we were refering to a non-existent row.

Change-Id: I676b1a7727a88e13a3e465bd96cbbaf18dad2fa6